Included max-width on important elements. Prevents elements from stretching forever.

--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ svg path {
 
 #navigation {
 	margin: 0 auto;
+	max-width: 62.5rem;
 	width: 80%;
 	text-align: center;
 }
@@ -106,7 +107,7 @@ svg path {
 
 #main {
 	margin: 35px auto;
-    /*text-align: center;*/
+    max-width: 62.5rem;
     width: 80%;
     background: #ffffff none repeat scroll 0 0;
     box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.25);
